fix: layout width on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -96,6 +96,10 @@ body {
   .sidebar-right {
     display: none;
   }
+
+  .container {
+    width: 100%;
+  }
 }
 
 @media (max-width: 768px) {
